--- a/package.json
+++ b/package.json
@@ -2,31 +2,34 @@
   "name": "ajs5bis",
   "private": true,
   "devDependencies": {
+    "browser-sync": "^2.9.12",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^2.0.0",
-    "grunt-concurrent": "^1.0.0",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-concurrent": "^2.0.4",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
+    "grunt-contrib-compass": "^1.0.4",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.12.0",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
-    "grunt-newer": "^1.1.0",
+    "grunt-newer": "^1.1.1",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "gulp": "^3.9.0",
+    "gulp-ruby-sass": "^2.0.5",
     "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^1.0.0",
-    "time-grunt": "^1.0.0"
+    "jshint-stylish": "^2.0.1",
+    "time-grunt": "^1.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
