--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-ruby-sass": "^2.0.5",
+    "gulp-uglify": "^1.5.1",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^2.0.1",
+    "run-sequence": "^1.1.4",
     "time-grunt": "^1.2.2"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "del": "^2.1.0"
   }
 }
