--- a/package.json
+++ b/package.json
@@ -27,8 +27,22 @@
     "grunt-wiredep": "^2.0.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-insert": "^0.5.0",
+    "gulp-md5": "^0.1.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-newer": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev": "^6.0.1",
     "gulp-ruby-sass": "^2.0.5",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-usemin": "^0.3.15",
+    "gulp-using": "0.0.1",
+    "gulp-util": "^3.0.7",
+    "gulp-zip": "^3.0.2",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^2.0.1",
     "run-sequence": "^1.1.4",
